tests/unit/errors/test3.js
// Punto y coma faltante antes de una sentencia if

var a = 5;
var b = 6
if(true){
	console.log(1);	
}
